update api reference and insights list

--- a/content/data/insights/insights.mdx
+++ b/content/data/insights/insights.mdx
@@ -48,5 +48,86 @@ You can create templates by picking only those insights that you need. Below is 
 | `cheque_bounces`                         | Summary of cheque bounces                                           |
 | `expenses_monthly_summary`               | Detailed classification of the user's monthly expenses              |
 | `inflows_monthly_summary`                | Detailed classificaiton of the user's monthly incomes               |
+| `employment_type`                        | Employment type of the user                                         |
+| `balances_on_20th`                       | Balances as on the 20th of each month                                |
+| `e_nach_3_days_range`                    | Recommended 3 day nach range of the user                             |
+| `e_nach_5_days_range`                    | Recommended 5 day nach range of the user                             |
+| `e_nach_7_days_range`                    | Recommended 7 day nach range of the user                             |
+| `fraud_flags`                            | Fraud flags identified in the statement: <br /> - Suspicious RTGS Transactions <br /> - Suspicious Bank eStatement <br /> - Negative EOD Balances <br /> - More Frequent Cash Deposits than Salary <br /> - Cash Deposits than Salary <br /> - Mostly Cash Mode <br /> - Salary credited through IMPS / UPI <br /> - Parties in both credit and debit transactions <br /> - Immediate big debits after Salary credit <br /> - Immediate cash withdrawals after cash deposit <br /> - Irregular Salary Credits <br /> - Circular entry detection |
+| `daily_credits`                          | Daily credit amounts in the statement                                |
+| `top_50_creditors`                       | Top 50 creditor's detected in the statement by value                 |
+| `top_50_debtors`                         | Top 50 debtor's detected in the statement by value                   |
+| `top_20_credits`                         | Top 20 credit transactions of the user by value                      |
+| `top_20_debits`                          | Top 20 debit transactions of the user by value                       |
+| `total_credits_weekly`                   | Week by week summary of credit counts and amounts                    |
+| `total_credits_daily`                    | Daily summary of credit counts and amounts                           |
+| `total_debits_weekly`                    | Week by week summary of debit counts and amounts                     |
+| `total_debits_daily`                     | Daily summary of debit counts and amounts                            |
+| `top_10_credits_calendar_month`          | Top 10 credit transactions for each month by value                   |
+| `top_10_debits_calendar_month`           | Top 10 debit transactions for each month by value                    |
+| `minimum_end_of_day_balance`             | Minimum of the end of day balances                                   |
+| `inflows_monthly_salary_summary`         | Sum of salaries in each month                                        |
+| `top_10_upi_id_creditors`                | Top 10 unique UPI IDs used for credit ranked by value                |
+| `top_10_upi_id_debitors`                 | Top 10 UPI IDs used for debit by value                               |
+| `entity_type_transaction_frequency`      | P2P and P2M split observed in the statement                          |
+| `top_5_upi_id_spend_category`            | Top 5 spends by value via upi payment method                         |
+| `top_50_debtors_monthly`                 | Monthwise top 50 debtor's detected in the statement by value         |
+| `top_50_creditors_monthly`               | Monthwise top 50 creditor's detected in the statement by value       |
+| `bank_address`                           | Address of the bank branch (and pincode)                             |
+| `transactions_last_n_mon`                | List of all transactions for a custom month range                    |
+| `top_10_debit_analysis`                  | Top 10 debit transactions by value with percentage impact on current balance |
+| `top_10_credit_analysis`                 | Top 10 credit transactions by value with percentage impact on current balance |
+| `top_10_debtor_analysis`                 | Top 10 debtor's detected in the statement by value with a summary of count and average amount. |
+| `top_10_creditor_analysis`               | Top 10 creditor's detected in the statement by value with a summary of count and average amount. |
+| `monthwise_peak_balance`                 | Peak balances monthwise                                             |
+| `monthwise_emi_analysis`                 | EMI analysis monthwise (amounts, dates, first occurrence date, last occurrence date) |
+| `monthwise_salary_analysis`              | Salary analysis monthwise (amount, date, employer name, amount consistency, date consistency) |
+| `monthwise_foir_analysis`                | Month on Month FOIR trends                                           |
+| `top_online_txn_analysis`                | List of top 10 online mode (non UPI) transactions                    |
+| `top_upi_txn_analysis`                   | List of top 10 UPI mode transactions                                 |
+| `statement_period_months`                | Period for which the statement is fetched (in months)                |
+| `salary_variance_gt_5`                   | Flag if percentage change in month on month salary is greater than 5%|
+| `total_income`                           | Total income detected for the user                                   |
+| `employer_name`                          | Captures employer name                                               |
+| `monthwise_day_count_eod_lt_emi`         | Monthly summary of days when EOD balance was lesser than the EMI amounts |
+| `last_txn_date`                          | Last transaction date in the bank statement                          |
+| `primary_account`                        | Account with highest number of transactions                          |
+| `monthwise_day_count_no_txn`             | Monthwise count of days when no transaction was done                 |
+| `monthwise_credit_lt_emi`                | Monthwise indication of whether total amount credited is lesser than total amount deducted for EMIs |
+| `emi_analysis`                           | EMI analysis (amounts, dates, first occurrence date, last occurrence date) |
+| `monthly_minimum_end_of_day_balance`     | Monthwise minimum end of day balance                                 |
+| `monthly_average_end_of_day_balance`     | Monthwise average end of day balance                                 |
+| `monthly_total_credits`                  | Monthwise total number of credits to the user's accounts             |
+| `monthly_total_credits_value`            | Monthwise total amounts of credits to the user's accounts            |
+| `monthly_total_debits`                   | Monthwise total number of debits to the user's accounts              |
+| `monthly_total_debits_value`             | Monthwise total amounts of debits to the user's accounts             |
+| `monthly_inward_cheque_bounce_count`     | Monthwise total number of inward cheque bounces, bounces returned to the payee |
+| `monthly_outward_cheque_bounce_count`    | Monthwise total number of outward cheque bounces, bounces returned to the drawer |
+| `l1_l2_expenses_monthly_summary`         | Monthwise breakdown of expenses for each category                    |
+| `l1_l2_inflows_monthly_summary`          | Monthwise breakdown of inflows for each category                     |
+| `statement_date_range`                   | The range of dates for which transaction statements are available.   |
+| `monthwise_cash_withdrawal_x_total_debit`| Cash withdrawal to total debit ratio, monthwise                      |
+| `all_transactions_with_category`         | Transaction level enrichment data for all transactions (categories, counter parties, recurring non recurring) |
+| `investments_overall_summary`            | Aggregated information across all connected investment accounts       |
+| `stocks_holdings_summary`                | Aggregated and holding-wise information across connected stocks accounts |
+| `mutualfunds_holdings_summary`           | Aggregated and holding-wise information across connected mutual funds accounts |
+| `etf_holdings_summary`                   | Aggregated and holding-wise information across connected ETF accounts |
+| `account_verification_loan_transactions` | List of account verification transactions carried out with lending entities |
+| `account_verification_non_loan_transactions` | List of account verification transactions carried out with non lending entities |
+| `loan_amount_tracking`                   | Trace of loan amount spends after receiving credit disbursals         |
+| `financial_institution_debit_analysis`   | Detects debits made to financial institutions (covers lending, insurance and investment entities) |
+| `additional_income_sources`              | Detects additional sources of income (apart from salary).             |
+| `monthly_salary_count`                   | Count of salaries detected each month                                 |
+| `account_verification_loan_transactions_credit` | List of account verification transactions carried out with lending entities (only credit type) |
+| `credit_greater_than_and_equal_to_50k`   | List of credits greater than or equal to INR 50,000                   |
+| `monthly_overdrawn_days_count`           | Total days for which the account was in overdrawn state               |
+| `monthly_average_salary_per_quarter`     | Monthly average salary per quarter of the user                        |
+| `monthly_average_salary_per_half_year`   | Monthly average salary per six months of the user                     |
+| `monthly_average_salary_per_year`        | Monthly average salary per twelve months of the user                  |
+| `self_transfer_transactions`             | List of all transfers made by the user to their own account with a different bank |
+| `investments_overall_summary`            | Aggregated information across all connected investment accounts       |
+| `stocks_holdings_summary`                | Aggregated and holding-wise information across connected stocks accounts |
+| `mutualfunds_holdings_summary`           | Aggregated and holding-wise information across connected mutual funds accounts |
+| `etf_holdings_summary`                   | Aggregated and holding-wise information across connected ETF accounts |
 
 <WasPageHelpful />
