--- a/content/data/insights/notifications.mdx
+++ b/content/data/insights/notifications.mdx
@@ -26,13 +26,14 @@ Setu will post this payload to your notification endpoint when Insights report i
   {`{
   "type": "INSIGHT_STATUS_UPDATE",
   "timestamp": 2018-12-06T11:39:57.153Z,
-  "jobId": "d4f40bd9-a22f-4408-a622-4e8a1e4fbda6",
+  "reportId": "d4f40bd9-a22f-4408-a622-4e8a1e4fbda6",
   "success": true,
   "data": {
     "status": "READY", 
     "insights": {
       // ... insight_name : insight_value
-    }
+    },
+    "insight_errors": {}
   },
   "error": {}
 }`}
