Clear node modules

--- a/content/data/okyc/overview.mdx
+++ b/content/data/okyc/overview.mdx
@@ -4,11 +4,18 @@ page_title: Offline Aadhar KYC overview
 order: 0
 visible_in_sidebar: false
 ---
-<Callout type="error">
-  🚨This service has been discontinued right now, due to technical changes implemented by UIDAI, that affect all service providers. In the meantime, we recommend <a href="/data/digilocker/overview">DigiLocker ↗</a> as an alternative, and are exploring ways to bring back an easier Aadhaar verification UX for you.
-</Callout>
 
 ## Offline Aadhaar KYC
+
+<Callout type="error">
+  🚨This service has been discontinued right now, due to technical changes
+  implemented by UIDAI, that affect all service providers. In the meantime, we
+  recommend <a href="/data/digilocker/overview">DigiLocker ↗</a> as an
+  alternative, and are exploring ways to bring back an easier Aadhaar
+  verification UX for you.
+</Callout>
+
+<br />
 
 ### What is offline Aadhaar KYC?
 
