Hide OKYC product

--- a/content/data/okyc/aadhaar-redundancy.mdx
+++ b/content/data/okyc/aadhaar-redundancy.mdx
@@ -2,5 +2,5 @@
 sidebar_title: Aadhaar Redundancy
 page_title: Redundancy for Aadhaar OKYC
 order: 5
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
