--- a/content/data/okyc/auto-okyc-api-integration.mdx
+++ b/content/data/okyc/auto-okyc-api-integration.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Auto OKYC
 page_title: Auto OKYC API integration
 order: 4
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## AUTO-OKYC API integration
