--- a/content/data/okyc/okyc-api-integration.mdx
+++ b/content/data/okyc/okyc-api-integration.mdx
@@ -2,7 +2,7 @@
 sidebar_title: OKYC
 page_title: OKYC API integration
 order: 3
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## OKYC API integration
