--- a/content/data/okyc/overview.mdx
+++ b/content/data/okyc/overview.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Overview
 page_title: Offline Aadhar KYC overview
 order: 0
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Offline Aadhaar KYC
