--- a/content/data/okyc/pre-built-screens.mdx
+++ b/content/data/okyc/pre-built-screens.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Pre-built screens
 page_title: Offline Aadhar pre-built screens
 order: 2
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Offline Aadhaar KYC integration
