--- a/content/data/okyc/api-reference.mdx
+++ b/content/data/okyc/api-reference.mdx
@@ -2,5 +2,5 @@
 sidebar_title: API reference
 page_title: Offline Aadhar API reference
 order: 6
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
