added tags feature for AA framework

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -38,7 +38,10 @@ Call this API to create a consent request. The details of the request will be pr
       "to": "2023-01-01T00:00:00Z"
   },
   "context": [
-  ]
+  ],
+  "additionalParams": {
+    "tags": ["Loan_Tracking", "Partner_X"]
+  }
 }`}
 </CodeBlockWithCopy>
 <Row>
@@ -97,6 +100,10 @@ Call this API to create a consent request. The details of the request will be pr
         "count": "0",
         "lastUsed": null
     },
+    "tags": [
+        "Loan_Tracking",
+        "Partner_X"
+    ],
     "traceId": "1-6433a06a-4b99c3a81b538bc762b5aa08"
 }
 `}
@@ -234,6 +241,10 @@ If the consent is approved, the status in the response will be `ACTIVE`. After t
         "consentExpiry": "2023-08-02T12:40:41.165Z"
     },
     "accountsLinked": [],
+    "tags": [
+        "Loan_Tracking",
+        "Partner_X"
+    ],
     "traceId": "26b8bc4c-5d33-43a1-a58f-be5d4d0acbd0"
 }`}
               </CodeBlockWithCopy>
@@ -289,6 +300,10 @@ If the consent is approved, the status in the response will be `ACTIVE`. After t
         "count": "0"
     },
     "accountsLinked": [],
+    "tags": [
+        "Loan_Tracking",
+        "Partner_X"
+    ],
     "traceId": "74d3032a-597e-40e1-859b-67b035e8a0e0"
 }`}
               </CodeBlockWithCopy>
