removed list for single element in error messages column under data fetch API

--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -595,9 +595,7 @@ Auto-Fetch data feature aims to absorb this complexity from the FIUs. With Auto-
                                         <code>InvalidConsentUse</code>
                                     </td>
                                     <td>
-                                        <ul>
-                                            <li>Consent fetch frequency exceeded</li>
-                                        </ul>
+                                        Consent fetch frequency exceeded
                                     </td>
                                 </tr>
                                 <tr>
@@ -605,9 +603,7 @@ Auto-Fetch data feature aims to absorb this complexity from the FIUs. With Auto-
                                         <code>InvalidConsentStatus</code>
                                     </td>
                                     <td>
-                                        <ul>
-                                            <li>Consent for which data fetch has been requested has expired</li>
-                                        </ul>
+                                        Consent for which data fetch has been requested has expired
                                     </td>
                                 </tr>
                                 <tr>
@@ -615,9 +611,7 @@ Auto-Fetch data feature aims to absorb this complexity from the FIUs. With Auto-
                                         <code>SessionExpired</code>
                                     </td>
                                     <td>
-                                        <ul>
-                                            <li>Session to fetch data for a session ID has expired</li>
-                                        </ul>
+                                        Session to fetch data for a session ID has expired
                                     </td>
                                 </tr>
                                 <tr>
@@ -625,9 +619,7 @@ Auto-Fetch data feature aims to absorb this complexity from the FIUs. With Auto-
                                         <code>ConsentRevoked</code>
                                     </td>
                                     <td>
-                                        <ul>
-                                            <li>Consent for which data fetch has been requested has been revoked</li>
-                                        </ul>
+                                        Consent for which data fetch has been requested has been revoked
                                     </td>
                                 </tr>
                                 <tr>
@@ -635,9 +627,7 @@ Auto-Fetch data feature aims to absorb this complexity from the FIUs. With Auto-
                                         <code>UpstreamServerDown</code>
                                     </td>
                                     <td>
-                                        <ul>
-                                            <li>Received 500 from upstream AA</li>
-                                        </ul>
+                                        Received 500 from upstream AA
                                     </td>
                                 </tr>
                                 <tr>
